--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^4.1.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
