Fixed couple issues

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-RAPID_API_KEY = "fab6caa435msh1663b3eaa0ef5cep142e59jsn341369dce05d"
+#RAPID_API_KEY = "fab6caa435msh1663b3eaa0ef5cep142e59jsn341369dce05d"
+RAPID_API_KEY = "2681ca8ab5msh607d905c6d3af77p1e99b9jsn2ba5a5434e7f"
